--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       content="width=device-width, initial-scale=1"
       shrink-to-fit="no"
     />
+    <meta name="google-site-verification" content="dTvcWU6pBz7ckf8kBZCnPgaMTGGKNrXZLZvpWSTigCY" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
